got mobile responsive font sizes and fixed the horizontal scroll bar by setting the .bg div to have a max-width of 100%

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
     /* background-attachment: fixed; */
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
 }
 
 #welcome {
@@ -74,4 +75,28 @@ a:hover {
     text-decoration: none;
 }
 
+
+
+/*-----------------------------------------------*/
+/*-----------------------------------------------*/
+/*-----------------------------------------------*/
 /* media queries to create responsive font sizing */
+/*-----------------------------------------------*/
+/* mobile phones */
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    h5 {
+        font-size: 15px;
+    }
+
+    p {
+        font-size: 12px;
+    }
+}
